[project]
name = "crypto-duth"
version = "0.0.1"
description = "Companion material for the DUTH course on cryptography"
authors = [
    { name = "Vasilis Perifanis", email = "vperifan@ee.duth.gr" },
]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.5",
    "matplotlib>=3.10.9",
    "notebook>=7.5.4",
    "numpy>=2.4.4",
    "phe>=1.5.0",
    "pycryptodome>=3.23.0",
    "scikit-learn>=1.8.0",
    "shamirs>=4.0.0",
    "tenseal>=0.3.16",
    "torch>=2.11.0",
]
